Fixed data coloring logic in sensor table
- Corrected the column index for applying color based on sensor values.
- Ensured only out-of-range values are highlighted.

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -22,6 +22,13 @@
         .footer {
             z-index: 4
         }
+        .overheat {
+        	color: red;
+        }
+        .overcool {
+        	color: blue;
+        }
+
 /*
         .footer {
             z-index: 1030; */
